ignore config file added example config file added example hook script removed github hook script

--- a/config.php.example
+++ b/config.php.example
@@ -13,11 +13,16 @@ $authorized_users = array(
         array(
                 'name' => 'gitlab',
                 'key' => '5aef35982fb2d34e9d9d4502f6ede1072793222d',
+                'ip_addresses' => array('10.9.8.7','172.6.5.4'),
+        ),
+	array(
+                'name' => 'github-username',
+                'key' => '5aef35982fb2d356789d4502f6ede1072793222d',
                 'ip_addresses' => array('*'),
         ),
 );
 
 // Enable for more verbose logging and client site logging
-$debug =TRUE;
+$debug =FALSE;
 
 ?>
