fixed some errors
RETVAL was not being set
success message was static to stable instead of using the variable

--- a/hooks/repo_name.sh.example
+++ b/hooks/repo_name.sh.example
@@ -13,9 +13,9 @@ if [ $REMOTE_HOST == '' ]; then
 else
 	ssh $SSH_OPTIONS $REMOTE_USER@$REMOTE_HOST "$RUN_COMMANDS"
 fi
-
+RETVAL=$?
 if [ $RETVAL -ne 0 ]; then 
 	echo "failed to deploy"; 
 else 
-	echo " stable was deployed if changes exist";
+	echo " ${DEPLOY_BRANCH} was deployed if changes exist";
 fi
